Ingress-Controller/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue-app
spec:
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - image: devopswithcloudhub/nginx:blue
        name: bluepod
        ports:
        - containerPort: 80
