Ingress-Controller/blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue-app
spec:
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - image: devopswithcloudhub/nginx:blue
        name: bluepod
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue-app
spec:
  type: NodePort
  selector:
    app: blue-app
  ports:
  - port: 80
    targetPort: 80
