Ingress-Controller/green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
  labels:
    app: green-app
spec:
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - image: devopswithcloudhub/nginx:green
        name: greenpod
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
  labels:
    app: green-app
spec:
  type: NodePort
  selector:
    app: green-app
  ports:
  - port: 80
    targetPort: 80
