Ingress-Controller/orange.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange-app
  labels:
    app: orange-app
spec:
  selector:
    matchLabels:
      app: orange-app
  template:
    metadata:
      labels:
        app: orange-app
    spec:
      containers:
      - image: devopswithcloudhub/nginx:orange
        name: orangepod
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orange-service
  labels:
    app: orange-app
spec:
  type: NodePort
  selector:
    app: orange-app
  ports:
  - port: 80
    targetPort: 80
