Ingress-Controller/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue-app
spec:
  type: NodePort
  selector:
    app: blue-app
  ports:
  - port: 80
    targetPort: 80
