Ingress-Controller/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # annotations:
  #   kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: orange-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 80
